[tool.poetry]
name = "statuslight_client"
version = "0.1.0"
description = ""
authors = ["Daniel Bengtsson <daniel.f.bengtsson@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-mock = "^1.10"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
